--- a/styles/main.css
+++ b/styles/main.css
@@ -2,5 +2,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin-left: 10px;
-
+}
+a:hover, a:focus {
+    font-style:italic;
+    color: orangered;
 }
