--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,11 @@ body {
     margin-left: 10px;
 }
 a:hover, a:focus {
-    font-style:italic;
+    font-style: italic;
     color: orangered;
+}
+header h1 {
+    font-size: 175%;
+    color: maroon;
+    text-indent: 30px;
 }
